reorder for most legible first, fix height on black background

--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  min-height: 100vh;
 }
 
 .weight.weight-03 p {
